@@ -1,6 +1,6 @@
 NATIVE_DIRS = glue parser
 
-DIRS=generator api glib pango atk gdk gtk glade art gnome gda gnomedb gconf gphoto sample
+DIRS=generator api glib pango atk gdk gtk glade art gnome gda gnomedb gconf sample
 ROOT=/cygdrive/$(subst \,/,$(subst :\,/,$(SYSTEMROOT)))
 CSC=$(ROOT)/microsoft.net/framework/v1.0.3705/csc.exe
 MCS=mcs
