@@ -12,4 +12,3 @@ libart_lgpl-2.3.10 Art art_lgpl
 libgda-0.8.193/libgda Gda gda-2
 libgnomedb-0.8.193/libgnomedb GnomeDb gnomedb-2
 gstreamer-0.4.2/gst Gst gstreamer
-libgphoto2-2.1.2dev1/libgphoto2 Gphoto libgphoto2
