@@ -1,3 +1,13 @@
+2003-01-09  Rodrigo Moya <rodrigo@ximian.com>
+
+	* makefile:
+	* configure.in:
+	* api/Makefile.in:
+	* api/gphoto-api.xml:
+	* sources/gtk-sharp.sources:
+	* gphoto/Makefile.in:
+	* gphoto/.cvsignore: removed gphoto2 bindings, to be moved to mphoto.
+
 2003-01-06  Pedro Abelleira Seco <pedroabelleira@yahoo.es>
 
 	* pango/Layout.custom: Add Size get property and add some nicer overloads
